# brdd-rust

./: AI_GUIDELINES.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
brdd-macros/: Cargo.toml
brdd-macros/src/: lib.rs
src/: lib.rs  macros.rs
